# comfy-pilot

./: .gitignore  README.md  __init__.py  cli_adapters.py  conftest.py  mcp_server.py  pyproject.toml  settings_store.py
.github/workflows/: test.yml
js/: claude-code.js
tests/: test_cli_adapters.py  test_edit_graph.py  test_mcp_plugin_endpoints.py  test_settings_store.py
