[project]
name = "comfy-pilot"
description = "MCP server + multi-CLI embedded terminals that let AI coding agents see and edit your ComfyUI workflows"
version = "1.0.25"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/ConstantineB6/comfy-pilot"

[tool.comfy]
PublisherId = "constantine"
DisplayName = "Comfy Pilot"
Icon = "https://raw.githubusercontent.com/ConstantineB6/comfy-pilot/main/thumbnail.jpg"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
consider_namespace_packages = false
